--- a/pom.xml
+++ b/pom.xml
@@ -127,8 +127,8 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.dirtangel.miodigy.Main</mainClass>
+                            <classpathPrefix>libs</classpathPrefix>
+                            <!--<mainClass>com.dirtangel.miodigy.Main</mainClass>-->
                         </manifest>
                     </archive>
                 </configuration>
