--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.cloud.gcp.config.project-id=miodigy
 
 
 spring.mvc.static-path-pattern=/static/**
+
+spring.mvc.view.prefix: /WEB-INF/views/
+spring.mvc.view.suffix: .html
