--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.application.name=Bootstrap Spring Boot
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true 
-spring.thymeleaf.prefix=classpath:/view/
+spring.thymeleaf.prefix=classpath:/WEB-INF/views/
 spring.thymeleaf.suffix=.html
 
 server.port=8081
